--- a/django_project/templates/treasure/resources.html
+++ b/django_project/templates/treasure/resources.html
@@ -7,22 +7,42 @@
 {% endblock %}
 
 {% block body_block %}
+    <!--The following are just placeholders--><p><a href="/treasure/add_file_resource">[Add File Resource]</a>  <a href="/treasure/add_web_resource">[Add Web Resource]</a></p>
 
-<p/>
-<!--The following are just placeholders-->
-<p><a href="/treasure/add_file_resource">[Add File Resource]</a>  <a href="/treasure/add_web_resource">[Add Web Resource]</a></p>
-<div class="hero-unit">
-    <div class="row-fluid">
-        <h3>Latest Resources</h3>
-        {% if resources %}
-        <ul>
-            {% for resource in resources %}
-            <li><a href="/treasure/resource/{{ resource.id }}">{{ resource.name }}</a></li>
-            {% endfor %}
-        </ul>
-        {% else %}
-            <strong>No resources present.</strong>
-        {% endif %}
-    </div>
-</div>
+    <div class="hero-unit panel panel-default">
+        <div class="panel-heading clearfix">
+			<h3>Resources</h3>
+        </div>
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table id="Resources" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Resource Name</th>
+                            <th>Author</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for resource in resources %}
+                            <tr class="studentLabel">
+                                <td><a href="../resource/{{ resource.id }}">{{resource.name}}</a></td>
+                                <td>{{resource.author}}</td>
+                                <td>{{resource.description}}</td>
+                            </tr>
+                        {% endfor %}
+
+                    </tbody>
+                 </table>
+            </div>
+        </div> <!-- close body -->
+    </div> <!-- close panel -->
+
+	<!-- script for table -->
+	<script type="text/javascript">
+	$(document).ready(function(){
+	    $('#Resources').DataTable();
+	});
+	</script>
+
 {% endblock %}
