Viewing resources now uses the new tag system.
The topic and level tags appear on the right pane, whilst any 'other'
tags appear where the old tags were.  I also fancied up the the buttons
on the page and removed the blue image.

--- a/django_project/static/css/treasure.css
+++ b/django_project/static/css/treasure.css
@@ -54,6 +54,6 @@ color: rgba(198, 198, 198, 1);
 }
 
 /* removing underlined text inside buttons */
-a.btn.btn-primary {
+a.btn {
 	text-decoration: none;
 }
