--- a/django_project/templates/treasure/search.html
+++ b/django_project/templates/treasure/search.html
@@ -7,37 +7,73 @@
 {% endblock %}
 
 {% block body_block %}
-<div class="hero-unit">
-    <h2>Search Resources</h2>
-    <br/>
-    <div class="container">
-        {% if searched %}
-            {% if resources %}
-                <h4>Results</h4>
-                <ul>
-                {% for resource in resources %}
-                    <li><a href="/treasure/resource/{{ resource.id }}">{{ resource.name }}<a/></li>
-                {% endfor %}
-                </ul>
+    {% if searched %}
+        {% if results %}
+            <div class="hero-unit panel panel-default">
+                <div class="panel-heading clearfix">
+                    <h3>Results</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table id="Results" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Author</th>
+                                    <th>Description</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for result in results %}
+                                    <tr class="studentLabel">
+                                        {% if resource %}
+                                            <td><a href="../resource/{{ result.id }}">{{result.name}}</a></td>
+                                        {% else %}
+                                            <td><a href="../packs/{{ result.id }}">{{result.name}}</a></td>
+                                        {% endif %}
+                                        <td>{{result.author}}</td>
+                                        <td>{{result.description}}</td>
+                                    </tr>
+                                {% endfor %}
+
+                            </tbody>
+                         </table>
+                    </div>
+                </div> <!-- close body -->
+            
+
             {% else %}
-                <h4>No results</h4>
+                <div class="hero-unit"><h3>No results</h3>
             {% endif %}
             <br>
             <a class="btn btn-primary" href="/treasure/search">Search Again</a>
+            </div> <!-- close panel -->
         {% else %}
-            <form class="span6" id="search_form" method="post" action="/treasure/search/">            
-	
-	            {% csrf_token %}
+            <div class="hero-unit">
+                <h2>Search</h2>
+                <br/>
+                <div class="container">
+                        <form class="span6" id="search_form" method="post" action="/treasure/search/">            
+                
+                            {% csrf_token %}
 
-                    {% for field in form.visible_fields %}
-                        {{ field.errors }}
-                        {{ field.help_text }}<br/>
-                        {{ field }}<br/>
-                    {% endfor %}
-                    
-                <button class="btn btn-primary" type="submit" name="submit">Search</button>
-            </form>
+                                {% for field in form.visible_fields %}
+                                    {{ field.errors }}
+                                    {{ field.help_text }}<br/>
+                                    {{ field }}<br/>
+                                {% endfor %}
+                                
+                            <button class="btn btn-primary" type="submit" name="submit">Search</button>
+                        </form>
+                </div>
+            </div>
         {% endif %}
-    </div>
-</div>
+    {% if results %}
+        <!-- script for table -->
+        <script type="text/javascript">
+        $(document).ready(function(){
+            $('#Resources').DataTable();
+        });
+        </script>
+    {% endif %}
 {% endblock %}
