Can see the previous versions of a resource #21
On the versions page, users can now see a bulleted list of all previous
versions of a resource

--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -53,11 +53,11 @@
                     <li><a class="btn btn-block btn-primary" href="{{ files_resource.url }}" download>Download Resource</a></li>
                 {% endif %}
                     <li><p></li>
-                    <li><a class="btn btn-block btn-warning" href="/../evolve">Evolve Resource</a></li>
+                    <li><a class="btn btn-block btn-warning" href="/../treasure/resource/{{ resource.id}}/evolve">Evolve Resource</a></li>
                     <li><p></li>                  
-                    <li><a class="btn btn-block btn-success" href="/../evolve">Track Resource</a></li>
+                    <li><a class="btn btn-block btn-success" href="/../treasure/resource/{{ resource.id}}/track">Track Resource</a></li>
                     <li><p></li>                    
-                    <li><a class="btn btn-block btn-info" href="/../evolve">View Versions</a></li>
+                    <li><a class="btn btn-block btn-info" href="/../treasure/resource/{{ resource.id}}/versions">View Versions</a></li>
                 </ul>
                 <hr>
            </div>
