COmmenting out features that have not been implemented yet.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -52,9 +52,9 @@
                        </ul>
                        <ul class="nav">
                        {% if user.is_authenticated %}
-                           <form class="navbar-search pull-left" action="">
+                           <!--form class="navbar-search pull-left" action="">
 						 		<input class="search-query span2" placeholder="Quick Search" type="text">
-						   </form>                       
+						   </form-->                       
                            <li><a href="/treasure/search">Search</a></li>
                            <li><a href="/treasure/explore">Explore</a></li>
                            <li><a href="/treasure/resources">Resources</a></li>			   			   
