--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -100,10 +100,37 @@
         </div>
         <br><br><br>
         --- end comment -->
+<hr>
+        {% if want2talk %}
         <div>
-            <h2>Forum</h2>
-            <p>Forum goes here</p>
+            <p>People willing to organise discussion about {{resource_name}}:</p>
+	        <div class="table-responsive">
+	            <table id="Resources" class="table table-striped table-bordered" cellspacing="0" width="100%">
+	                <thead>
+	                    <tr>
+	                        <th>Teacher</th>
+	                        <th>Comment</th>
+	                    </tr>
+	                </thead>
+	                <tbody>
+	                    {% for record in want2talk %}
+	                        <tr class="studentLabel">
+	                            <td>{{record.teacher}}</td>
+	                            <td>{{record.comment}}</td>
+	                        </tr>
+	                    {% endfor %}
+                        <tr class="studentLabel">
+                            <td>+ADD SELF</td>
+                            <td>-Pending Form to add self-</td>
+                        </tr>
+	                </tbody>
+	             </table>
+	        </div>
         </div>
+		{% else %}
+		Nobody declared interest in organising a discussion about {{resource_name}} yet. <a href="">Be the first</a>
+        {% endif %}
+
         <!-- issues go here -->
     {% else %}
         <h2>No Resource At This URL.</h2>
