Some general style changes
Mainly making the packs page look like the resources page.

--- a/django_project/templates/treasure/explore.html
+++ b/django_project/templates/treasure/explore.html
@@ -8,7 +8,7 @@
 
 {% block body_block %}
 
-    <div class="row-fluid">
+    <div class="row-fluid hero-unit">
         <h2>Explore</h2>
 		<div class="row-fluid">
 		            <ul class="thumbnails">
