--- a/django_project/templates/treasure/packs.html
+++ b/django_project/templates/treasure/packs.html
@@ -7,9 +7,9 @@
 {% endblock %}
 
 {% block body_block %}
-      <div class="panel panel-default">
+      <div class="panel panel-default hero-unit">
         <div class="panel-heading clearfix">
-			<h3><u>Packs</u></h3>
+			<h3>Packs</h3>
         </div>
         <div class="panel-body">
             <div class="table-responsive">
