--- a/django_project/templates/treasure/resources.html
+++ b/django_project/templates/treasure/resources.html
@@ -10,10 +10,10 @@
 
     <div class="hero-unit container panel panel-default">
         <div class="span5"><a class="btn btn-block btn-primary" href="/treasure/add_file_resource">Add File Resource</a><br></div>
-        <div class="span5"><a class="btn btn-block btn-primary" href="/treasure/add_web_resource">Add Web Resource</a></div>
+        <div class="span5"><a class="btn btn-block btn-primary" href="/treasure/add_web_resource">Add Web Resource</a><br></div>
         
         <div class="panel-heading clearfix">
-			<br><h3>Resources</h3>
+			<h3>Resources</h3>
         </div>
         
         <div class="panel-body">
