--- a/django_project/templates/treasure/pack.html
+++ b/django_project/templates/treasure/pack.html
@@ -8,17 +8,16 @@
 
 {% block body_block %}
 {% if Pack_Resources %}
-<div class="container-fluid">
+<div class="container-fluid hero-unit">
 	<div class="row">
 			<div class="col-xs-6">
 				<div class="container-fluid">
 					  <div class="row">
-						  <div class="col-xs-6"><u>Pack Name</u>:<br>  <h3 style= 'margin-top: -5px';>{{pack.name}}</h3></div>
-						  <div class="col-xs-6"><u>Pack Creator</u>:<br>  <p style= 'margin-top: +7px';>{{pack.author}}</p></div>
+						  <div class="col-xs-6"><h2 style= 'margin-top: -5px';>{{pack.name}}</h2><p style= 'margin-top: -5px';>by {{pack.author}}</p></div>
 					  </div>
 					  <div class="row">
-						<div class="col-xs-6"><u>Description</u>:<br>  {{pack.description}}</div>
-						<div class="col-xs-6"><u>Tags</u>:<br>  	
+						<div class="col-xs-6"><strong>Description:</strong><br>  {{pack.description}}</div>
+						<div class="col-xs-6"><strong>Tags:</strong><br>  	
 							{% if tags %}
 								{% for tag in tags %}
 					              <a href="/../treasure/tags/{{ tag.id }}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %} 
