"by author" now changes depending o the context
it is "uploaded by" for file resources, and "added by" for web resources.
Also, separeing want2talk to its own hero unit to match the index
page.

--- a/django_project/templates/treasure/versions.html
+++ b/django_project/templates/treasure/versions.html
@@ -12,7 +12,7 @@
         <p>Raw tree: {{ raw_tree }}</p>
         <ul>
             {% for node in nodes %}
-                <li><a href="/../treasure/resource/node.id">{{ node.name }}</a></li>
+                <li><a href="/../treasure/resource/{{ node.id }}">{{ node.name }}</a></li>
             {% endfor %}
         </ul>
     <div>
