--- a/django_project/templates/treasure/login.html
+++ b/django_project/templates/treasure/login.html
@@ -7,13 +7,13 @@
 {% block body_block %}
 <div class="hero-unit">
     <div class="container">
-    <form class="form-signin span4" id="login_form" method="post" action="/treasure/login/">
+    <form class="form-signin span6" id="login_form" method="post" action="/treasure/login/">
         <h2 class="form-signin-heading">Please sign in</h2>
         {% csrf_token %}
         {% if bad_details %}
-            <p><strong>Your username and/or password were incorrect!</strong></p>
+            <p class="errorlist">Your username and/or password were incorrect!  Please try again.</p>
         {% elif disabled_account %}
-            <p><strong>Your account is currently disabled; we can't log you in!</strong></p>
+            <p class="errorlist">Your account is currently disabled; we can't log you in!</p>
         {% endif %}
 
         Username: <input type="text" class="input-block-level" placeholder="Username" name="username" value="" size="50" />
