--- a/django_project/templates/treasure/evolve.html
+++ b/django_project/templates/treasure/evolve.html
@@ -8,6 +8,79 @@
 
 {% block body_block %}
     <div class="hero-unit">
-        <h3>Evolve</h3>
-        <p>todo</p>
+        <h2>Evolve</h2>
+        
+        <ul class="nav nav-pills nav-justified">
+            <li><a data-toggle="tab" href="#file">Evolve with a File</a></li>
+            <li><a data-toggle="tab" href="#web">Evolve with a link</a></li>
+        </ul>
+
+        <div class="tab-content">
+        
+            <div id="file" class="tab-pane container">
+                <h3>File Evolve</h3>
+                <form class="span6" id="file_evolve" method="post" action="/treasure/resource/{{ resource_id }}/evolve/" enctype="multipart/form-data">
+                	{% csrf_token %}
+                
+                    {% for hidden in resource_form.hidden_fields %}
+                        {{ hidden }}
+                    {% endfor %}
+
+                    {% for field in resource_form.visible_fields %}
+                        {{ field.errors }}
+                        {{ field.help_text }}<br/>
+                        {{ field }}<br/>
+                    {% endfor %}
+                    
+                    {% for hidden in file_form.hidden_fields %}
+                        {{ hidden }}
+                    {% endfor %}
+
+                    {% for field in file_form.visible_fields %}
+                        {{ field.errors }}
+                        {{ field.help_text }}<br/>
+                        {{ field }}<br/>
+                    {% endfor %}
+                    <br/>
+                    <button class="btn btn-primary" type="submit" name="file_evolve">Upload Resource</button>
+                </form>
+            </div>
+            
+            <div id="web" class="tab-pane container">
+                <h3>Web Evolve</h3>
+                <form class="span6" id="web_evolve" method="post" action="/treasure/resource/{{ resource_id }}/evolve/" enctype="multipart/form-data">
+                	{% csrf_token %}
+                
+                    {% for hidden in resource_form.hidden_fields %}
+                        {{ hidden }}
+                    {% endfor %}
+
+                    {% for field in resource_form.visible_fields %}
+                        {{ field.errors }}
+                        {{ field.help_text }}<br/>
+                        {{ field }}<br/>
+                    {% endfor %}
+                    
+                    {% for hidden in web_form.hidden_fields %}
+                        {{ hidden }}
+                    {% endfor %}
+
+                    {% for field in web_form.visible_fields %}
+                        {{ field.errors }}
+                        {{ field.help_text }}<br/>
+                        {{ field }}<br/>
+                    {% endfor %}
+                    <br/>
+                    <button class="btn btn-primary" type="submit" name="web_evolve">Upload Resource</button>
+                </form>
+            </div>
+            
+            <div class="active tab-pane container"">
+                <ul><li><h3>Please select evolution type.</h3></li></ul>
+            </div>
+
+        </div>
+        
+    </div>
+    
 {% endblock %}
