--- a/django_project/templates/treasure/pack.html
+++ b/django_project/templates/treasure/pack.html
@@ -58,7 +58,9 @@
 		    </div> <!-- close body -->
 		</div> <!-- close panel -->
 	  {% else %}
-	  <p> no resources </p>
+	  <br>
+	  <h4>There are no resources in this pack.</h4>
+	  <a href="/treasure/resources/">Return to Resources</a>
 	  {% endif %}
 </div>
 {% else %}
