--- a/django_project/templates/treasure/add_web_resource.html
+++ b/django_project/templates/treasure/add_web_resource.html
@@ -9,7 +9,7 @@
 {% block body_block %}
 
 <div class="hero-unit">
-    <h2>Upload a Web Resource</h2>
+    <h2>Link to a Web Resource</h2>
     <br/>
     <div class="container">
         <form class="span6" id="upload_form" method="post" action="/treasure/add_web_resource/">
